
The existing 'Append to Register' command has been replaced with the
'Cut Append to Register' and 'Copy Append to Register' commands.

* Syntax highlighting improvements

A new 'Reload Edit Modes' command in the Utilities menu reloads all
syntax highlighting modes. This makes writing your own modes easier; you
no longer need to restart jEdit to see changes to mode files take
effect.

Syntax highlighting for Verilog, MIPS R2000 assembly and Occam files has
been added.

* New version of BeanShell

jEdit now bundles BeanShell 1.1a18. Changes since BeanShell 1.01 include
improved performance, cleaner internals, bug fixes, and a few new
language features.

* Search and replace improvements

The 'Find' command now pre-selects the 'current buffer' radio button in
the search and replace dialog box.

Two new commands, 'Search in Open Buffers' and 'Search in Directory',
pre-select the appropriate multi-file search settings.

Occurrences of the search string can now be replaced with the result of
a BeanShell code snippet that is evaluated for each occurrence. For
example, to convert HTML tags to lower case, perform a 'Replace All',
searching for the following regular expression:

	<(.*?)>

Replacing it with:

	"<" + _1.toLowerCase() + ">"

Version 1.1.3 of the gnu.regexp package is now included. This version
adds support for positive and negative lookaheads.

* Positional parameters in abbreviations

Positional parameters are an advanced feature that make abbreviations
much more useful. The best way to describe them is with an example.

Suppose you have an abbreviation "F" that is set to expand to the
following:

	for(int $1 = 0; $1 < $2; $1++)

Now, simply entering "F" in the buffer and expanding it will insert the
above text. However, if you expand "F#j#array.length#", the following
will be inserted:

	for(int j = 0; j < array.length; j++)

Expansions can contain up to nine positional parameters.

* Status bar
