@@ -1,0 +1,445 @@
+<?xml version="1.0"?>
+
+<!DOCTYPE MODE SYSTEM "xmode.dtd">
+
+<MODE NAME="omnimark">
+	<PROPS>
+		<PROPERTY NAME="lineComment" VALUE=";" />
+		<PROPERTY NAME="noWordSep" VALUE="-_" />
+	</PROPS>
+	<RULES ESCAPE="%" IGNORE_CASE="TRUE" HIGHLIGHT_DIGITS="TRUE">
+		<!-- whitespace: (space and tab) -->
+		<WHITESPACE> </WHITESPACE>
+		<WHITESPACE>	</WHITESPACE>
+
+		<!-- Comments -->
+		<EOL_SPAN TYPE="COMMENT1">;</EOL_SPAN>
+
+		<!-- Literals -->
+		<SPAN TYPE="LITERAL1">
+			<BEGIN>"</BEGIN>
+			<END>"</END>
+		</SPAN>
+		<SPAN TYPE="LITERAL1">
+			<BEGIN>'</BEGIN>
+			<END>'</END>
+		</SPAN>
+
+		<!-- Operators -->
+		<SEQ TYPE="OPERATOR">&amp;</SEQ>
+		<SEQ TYPE="OPERATOR">|</SEQ>
+		<!-- <SEQ TYPE="OPERATOR">-</SEQ> -->
+		<SEQ TYPE="OPERATOR">+</SEQ>
+		<SEQ TYPE="OPERATOR">/</SEQ>
+		<SEQ TYPE="OPERATOR">&lt;=</SEQ>
+		<SEQ TYPE="OPERATOR">&gt;=</SEQ>
+		<SEQ TYPE="OPERATOR">=&gt;</SEQ>
+		<SEQ TYPE="OPERATOR">&lt;</SEQ>
+		<SEQ TYPE="OPERATOR">&gt;</SEQ>
+		<SEQ TYPE="OPERATOR">=</SEQ>
+		<!-- <SEQ TYPE="OPERATOR">_</SEQ> -->
+		<SEQ TYPE="OPERATOR">~</SEQ>
+		<SEQ TYPE="OPERATOR">@</SEQ>
+		<SEQ TYPE="OPERATOR">$</SEQ>
+		<SEQ TYPE="OPERATOR">%</SEQ>
+		<SEQ TYPE="OPERATOR">^</SEQ>
+		<SEQ TYPE="OPERATOR">*</SEQ>
+		<SEQ TYPE="OPERATOR">?</SEQ>
+		<SEQ TYPE="NULL">(</SEQ>
+		<SEQ TYPE="NULL">)</SEQ>
+		<SEQ TYPE="NULL">{</SEQ>
+		<SEQ TYPE="NULL">}</SEQ>
+		<SEQ TYPE="NULL">[</SEQ>
+		<SEQ TYPE="NULL">]</SEQ>
+		<SEQ TYPE="NULL">:</SEQ>
+		<SEQ TYPE="NULL">;</SEQ>
+		<SEQ TYPE="NULL">"</SEQ>
+		<SEQ TYPE="NULL">'</SEQ>
+		<SEQ TYPE="NULL">,</SEQ>
+		<SEQ TYPE="NULL">.</SEQ>
+
+		<!-- Keywords -->
+		<KEYWORDS IGNORE_CASE="TRUE">
+			<OPERATOR>EQUAL</OPERATOR>
+			<OPERATOR>LESS-EQUAL</OPERATOR>
+			<OPERATOR>GREATER-EQUAL</OPERATOR>
+			<OPERATOR>LESS-THAN</OPERATOR>
+			<OPERATOR>GREATER-THAN</OPERATOR>
+			<OPERATOR>NOT</OPERATOR>
+			<OPERATOR>AND</OPERATOR>
+			<OPERATOR>OR</OPERATOR>
+			<OPERATOR>IS</OPERATOR>
+			<OPERATOR>ISNT</OPERATOR>
+
+			<KEYWORD1>ACTIVATE</KEYWORD1>
+			<KEYWORD1>AGAIN</KEYWORD1>
+			<KEYWORD1>CATCH</KEYWORD1>
+			<KEYWORD1>CLEAR</KEYWORD1>
+			<KEYWORD1>CLOSE</KEYWORD1>
+			<KEYWORD1>COPY</KEYWORD1>
+			<KEYWORD1>COPY-CLEAR</KEYWORD1>
+			<KEYWORD1>CROSS-TRANSLATE</KEYWORD1>
+			<KEYWORD1>DEACTIVATE</KEYWORD1>
+			<KEYWORD1>DECLARE</KEYWORD1>
+			<KEYWORD1>DECREMENT</KEYWORD1>
+			<KEYWORD1>DEFINE</KEYWORD1>
+			<KEYWORD1>DISCARD</KEYWORD1>
+			<KEYWORD1>DIVIDE</KEYWORD1>
+			<KEYWORD1>DO</KEYWORD1>
+			<KEYWORD1>DOCUMENT-END</KEYWORD1>
+			<KEYWORD1>DOCUMENT-START</KEYWORD1>
+			<KEYWORD1>DONE</KEYWORD1>
+			<KEYWORD1>DTD-START</KEYWORD1>
+			<KEYWORD1>ELEMENT</KEYWORD1>
+			<KEYWORD1>ELSE</KEYWORD1>
+			<KEYWORD1>ESCAPE</KEYWORD1>
+			<KEYWORD1>EXIT</KEYWORD1>
+			<KEYWORD2>EXTERNAL-DATA-ENTITY</KEYWORD2>
+			<KEYWORD2>EXTERNAL-TEXT-ENTITY</KEYWORD2>
+			<KEYWORD1>FAIL</KEYWORD1>
+			<KEYWORD1>FIND</KEYWORD1>
+			<KEYWORD1>FIND-END</KEYWORD1>
+			<KEYWORD1>FIND-START</KEYWORD1>
+			<KEYWORD1>FORMAT</KEYWORD1>
+			<KEYWORD1>GROUP</KEYWORD1>
+			<KEYWORD1>HALT</KEYWORD1>
+			<KEYWORD1>HALT-EVERYTHING</KEYWORD1>
+			<KEYWORD1>IGNORE</KEYWORD1>
+			<KEYWORD1>IMPLIED</KEYWORD1>
+			<KEYWORD1>INCLUDE</KEYWORD1>
+			<KEYWORD1>INCLUDE-END</KEYWORD1>
+			<KEYWORD1>INCLUDE-START</KEYWORD1>
+			<KEYWORD1>INCREMENT</KEYWORD1>
+			<KEYWORD1>INPUT</KEYWORD1>
+			<KEYWORD1>JOIN</KEYWORD1>
+			<KEYWORD1>LINE-END</KEYWORD1>
+			<KEYWORD1>LINE-START</KEYWORD1>
+			<KEYWORD1>LOG</KEYWORD1>
+			<KEYWORD1>LOOKAHEAD</KEYWORD1>
+			<KEYWORD1>MACRO</KEYWORD1>
+			<KEYWORD1>MACRO-END</KEYWORD1>
+			<KEYWORD1>MARKED-SECTION</KEYWORD1>
+			<KEYWORD1>MARKUP-COMMENT</KEYWORD1>
+			<KEYWORD1>MARKUP-ERROR</KEYWORD1>
+			<KEYWORD1>MARKUP-PARSER</KEYWORD1>
+			<KEYWORD1>MASK</KEYWORD1>
+			<KEYWORD1>MINUS</KEYWORD1>
+			<KEYWORD1>MODULO</KEYWORD1>
+			<KEYWORD1>NEW</KEYWORD1>
+			<KEYWORD1>NEWLINE</KEYWORD1>
+			<KEYWORD1>NEXT</KEYWORD1>
+			<KEYWORD1>OPEN</KEYWORD1>
+			<KEYWORD1>OUTPUT</KEYWORD1>
+			<KEYWORD1>OUTPUT-TO</KEYWORD1>
+			<KEYWORD1>OVER</KEYWORD1>
+			<KEYWORD1>PROCESS</KEYWORD1>
+			<KEYWORD1>PROCESS-END</KEYWORD1>
+			<KEYWORD1>PROCESS-START</KEYWORD1>
+			<KEYWORD1>PROCESSING-INSTRUCTION</KEYWORD1>
+			<KEYWORD1>PROLOG-END</KEYWORD1>
+			<KEYWORD1>PROLOG-IN-ERROR</KEYWORD1>
+			<KEYWORD1>PUT</KEYWORD1>
+			<KEYWORD1>REMOVE</KEYWORD1>
+			<KEYWORD1>REOPEN</KEYWORD1>
+			<KEYWORD1>REPEAT</KEYWORD1>
+			<KEYWORD1>RESET</KEYWORD1>
+			<KEYWORD1>RETHROW</KEYWORD1>
+			<KEYWORD1>RETURN</KEYWORD1>
+			<KEYWORD1>SAVE</KEYWORD1>
+			<KEYWORD1>SAVE-CLEAR</KEYWORD1>
+			<KEYWORD1>SCAN</KEYWORD1>
+			<KEYWORD1>SELECT</KEYWORD1>
+			<KEYWORD1>SET</KEYWORD1>
+			<KEYWORD1>SGML</KEYWORD1>
+			<KEYWORD1>SGML-COMMENT</KEYWORD1>
+			<KEYWORD1>SGML-DECLARATION-END</KEYWORD1>
+			<KEYWORD1>SGML-DTD</KEYWORD1>
+			<KEYWORD1>SGML-DTDS</KEYWORD1>
+			<KEYWORD1>SGML-ERROR</KEYWORD1>
+			<KEYWORD1>SGML-IN</KEYWORD1>
+			<KEYWORD1>SGML-OUT</KEYWORD1>
+			<KEYWORD1>SGML-PARSE</KEYWORD1>
+			<KEYWORD1>SGML-PARSER</KEYWORD1>
+			<KEYWORD1>SHIFT</KEYWORD1>
+			<KEYWORD1>SUBMIT</KEYWORD1>
+			<KEYWORD1>SUCCEED</KEYWORD1>
+			<KEYWORD1>SUPPRESS</KEYWORD1>
+			<KEYWORD1>SYSTEM-CALL</KEYWORD1>
+			<KEYWORD1>TEST-SYSTEM</KEYWORD1>
+			<KEYWORD1>THROW</KEYWORD1>
+			<KEYWORD1>TO</KEYWORD1>
+			<KEYWORD1>TRANSLATE</KEYWORD1>
+			<KEYWORD1>UC</KEYWORD1>
+			<KEYWORD1>UL</KEYWORD1>
+			<KEYWORD1>UNLESS</KEYWORD1>
+			<KEYWORD1>UP-TRANSLATE</KEYWORD1>
+			<KEYWORD1>WHEN</KEYWORD1>
+			<KEYWORD1>WHITE-SPACE</KEYWORD1>
+			<KEYWORD1>XML-PARSE</KEYWORD1>
+			
+			<KEYWORD2>ACTIVE</KEYWORD2>
+			<KEYWORD2>AFTER</KEYWORD2>
+			<KEYWORD2>ANCESTOR</KEYWORD2>
+			<KEYWORD2>AND</KEYWORD2>
+			<KEYWORD2>ANOTHER</KEYWORD2>
+			<KEYWORD2>ARG</KEYWORD2>
+			<KEYWORD2>AS</KEYWORD2>
+			<KEYWORD2>ATTACHED</KEYWORD2>
+			<KEYWORD2>ATTRIBUTE</KEYWORD2>
+			<KEYWORD2>ATTRIBUTES</KEYWORD2>
+			<KEYWORD2>BASE</KEYWORD2>
+			<KEYWORD2>BEFORE</KEYWORD2>
+			<KEYWORD2>BINARY</KEYWORD2>
+			<KEYWORD2>BINARY-INPUT</KEYWORD2>
+			<KEYWORD2>BINARY-MODE</KEYWORD2>
+			<KEYWORD2>BINARY-OUTPUT</KEYWORD2>
+			<KEYWORD2>BREAK-WIDTH</KEYWORD2>
+			<KEYWORD2>BUFFER</KEYWORD2>
+			<KEYWORD2>BY</KEYWORD2>
+			<KEYWORD2>CASE</KEYWORD2>
+			<KEYWORD2>CHILDREN</KEYWORD2>
+			<KEYWORD2>CLOSED</KEYWORD2>
+			<KEYWORD2>COMPILED-DATE</KEYWORD2>
+			<KEYWORD2>COMPLEMENT</KEYWORD2>
+			<KEYWORD2>CONREF</KEYWORD2>
+			<KEYWORD2>CONTENT</KEYWORD2>
+			<KEYWORD2>CONTEXT-TRANSLATE</KEYWORD2>
+			<KEYWORD2>COUNTER</KEYWORD2>
+			<KEYWORD2>CREATED</KEYWORD2>
+			<KEYWORD2>CREATING</KEYWORD2>
+			<KEYWORD2>CREATOR</KEYWORD2>
+			<KEYWORD2>CURRENT</KEYWORD2>
+			<KEYWORD2>DATA-ATTRIBUTE</KEYWORD2>
+			<KEYWORD2>DATA-ATTRIBUTES</KEYWORD2>
+			<KEYWORD2>DATA-CONTENT</KEYWORD2>
+			<KEYWORD2>DATA-LETTERS</KEYWORD2>
+			<KEYWORD2>DATE</KEYWORD2>
+			<KEYWORD2>DECLARED-CONREF</KEYWORD2>
+			<KEYWORD2>DECLARED-CURRENT</KEYWORD2>
+			<KEYWORD2>DECLARED-DEFAULTED</KEYWORD2>
+			<KEYWORD2>DECLARED-FIXED</KEYWORD2>
+			<KEYWORD2>DECLARED-IMPLIED</KEYWORD2>
+			<KEYWORD2>DECLARED-REQUIRED</KEYWORD2>
+			<KEYWORD2>DEFAULT-ENTITY</KEYWORD2>
+			<KEYWORD2>DEFAULTED</KEYWORD2>
+			<KEYWORD2>DEFAULTING</KEYWORD2>
+			<KEYWORD2>DELIMITER</KEYWORD2>
+			<KEYWORD2>DIFFERENCE</KEYWORD2>
+			<KEYWORD2>DIRECTORY</KEYWORD2>
+			<KEYWORD2>DOCTYPE</KEYWORD2>
+			<KEYWORD2>DOCUMENT</KEYWORD2>
+			<KEYWORD2>DOCUMENT-ELEMENT</KEYWORD2>
+			<KEYWORD2>DOMAIN-FREE</KEYWORD2>
+			<KEYWORD2>DOWN-TRANSLATE</KEYWORD2>
+			<KEYWORD2>DTD</KEYWORD2>
+			<KEYWORD2>DTD-END</KEYWORD2>
+			<KEYWORD2>DTDS</KEYWORD2>
+			<KEYWORD2>ELEMENTS</KEYWORD2>
+			<KEYWORD2>ELSEWHERE</KEYWORD2>
+			<KEYWORD2>EMPTY</KEYWORD2>
+			<KEYWORD2>ENTITIES</KEYWORD2>
+			<KEYWORD2>ENTITY</KEYWORD2>
+			<KEYWORD2>EPILOG-START</KEYWORD2>
+			<KEYWORD2>EQUAL</KEYWORD2>
+			<KEYWORD2>EXCEPT</KEYWORD2>
+			<KEYWORD2>EXISTS</KEYWORD2>
+			<KEYWORD2>EXTERNAL</KEYWORD2>
+			<KEYWORD2>EXTERNAL-ENTITY</KEYWORD2>
+			<KEYWORD2>EXTERNAL-FUNCTION</KEYWORD2>
+			<KEYWORD2>EXTERNAL-OUTPUT-FUNCTION</KEYWORD2>
+			<KEYWORD2>FALSE</KEYWORD2>
+			<KEYWORD2>FILE</KEYWORD2>
+			<KEYWORD2>FUNCTION</KEYWORD2>
+			<KEYWORD2>FUNCTION-LIBRARY</KEYWORD2>
+			<KEYWORD2>GENERAL</KEYWORD2>
+			<KEYWORD2>GLOBAL</KEYWORD2>
+			<KEYWORD2>GREATER-EQUAL</KEYWORD2>
+			<KEYWORD2>GREATER-THAN</KEYWORD2>
+			<KEYWORD2>GROUPS</KEYWORD2>
+			<KEYWORD2>HAS</KEYWORD2>
+			<KEYWORD2>HASNT</KEYWORD2>
+			<KEYWORD2>HERALDED-NAMES</KEYWORD2>
+			<KEYWORD2>ID</KEYWORD2>
+			<KEYWORD2>ID-CHECKING</KEYWORD2>
+			<KEYWORD2>IDREF</KEYWORD2>
+			<KEYWORD2>IDREFS</KEYWORD2>
+			<KEYWORD2>IN</KEYWORD2>
+			<KEYWORD2>IN-LIBRARY</KEYWORD2>
+			<KEYWORD2>INCLUSION</KEYWORD2>
+			<KEYWORD2>INITIAL</KEYWORD2>
+			<KEYWORD2>INITIAL-SIZE</KEYWORD2>
+			<KEYWORD2>INSERTION-BREAK</KEYWORD2>
+			<KEYWORD2>INSTANCE</KEYWORD2>
+			<KEYWORD2>INTERNAL</KEYWORD2>
+			<KEYWORD2>INVALID-DATA</KEYWORD2>
+			<KEYWORD2>IS</KEYWORD2>
+			<KEYWORD2>ISNT</KEYWORD2>
+			<KEYWORD2>ITEM</KEYWORD2>
+			<KEYWORD2>KEY</KEYWORD2>
+			<KEYWORD2>KEYED</KEYWORD2>
+			<KEYWORD2>LAST</KEYWORD2>
+			<KEYWORD2>LASTMOST</KEYWORD2>
+			<KEYWORD2>LC</KEYWORD2>
+			<KEYWORD2>LENGTH</KEYWORD2>
+			<KEYWORD2>LESS-EQUAL</KEYWORD2>
+			<KEYWORD2>LESS-THAN</KEYWORD2>
+			<KEYWORD2>LETTERS</KEYWORD2>
+			<KEYWORD2>LIBRARY</KEYWORD2>
+			<KEYWORD2>LITERAL</KEYWORD2>
+			<KEYWORD2>LOCAL</KEYWORD2>
+			<KEYWORD2>MATCH</KEYWORD2>
+			<KEYWORD2>MATCHES</KEYWORD2>
+			<KEYWORD2>MIXED</KEYWORD2>
+			<KEYWORD2>MODIFIABLE</KEYWORD2>
+			<KEYWORD2>NAME</KEYWORD2>
+			<KEYWORD2>NAME-LETTERS</KEYWORD2>
+			<KEYWORD2>NAMECASE</KEYWORD2>
+			<KEYWORD2>NAMED</KEYWORD2>
+			<KEYWORD2>NAMES</KEYWORD2>
+			<KEYWORD2>NDATA-ENTITY</KEYWORD2>
+			<KEYWORD2>NEGATE</KEYWORD2>
+			<KEYWORD2>NESTED-REFERENTS</KEYWORD2>
+			<KEYWORD2>NMTOKEN</KEYWORD2>
+			<KEYWORD2>NMTOKENS</KEYWORD2>
+			<KEYWORD2>NO</KEYWORD2>
+			<KEYWORD2>NO-DEFAULT-IO</KEYWORD2>
+			<KEYWORD2>NON-CDATA</KEYWORD2>
+			<KEYWORD2>NON-IMPLIED</KEYWORD2>
+			<KEYWORD2>NON-SDATA</KEYWORD2>
+			<KEYWORD2>NOT</KEYWORD2>
+			<KEYWORD2>NOTATION</KEYWORD2>
+			<KEYWORD2>NUMBER-OF</KEYWORD2>
+			<KEYWORD2>NUMBERS</KEYWORD2>
+			<KEYWORD2>NUTOKEN</KEYWORD2>
+			<KEYWORD2>NUTOKENS</KEYWORD2>
+			<KEYWORD2>OCCURRENCE</KEYWORD2>
+			<KEYWORD2>OF</KEYWORD2>
+			<KEYWORD2>OPAQUE</KEYWORD2>
+			<KEYWORD2>OPTIONAL</KEYWORD2>
+			<KEYWORD2>OR</KEYWORD2>
+			<KEYWORD2>PARAMETER</KEYWORD2>
+			<KEYWORD2>PARENT</KEYWORD2>
+			<KEYWORD2>PAST</KEYWORD2>
+			<KEYWORD2>PATTERN</KEYWORD2>
+			<KEYWORD2>PLUS</KEYWORD2>
+			<KEYWORD2>PREPARENT</KEYWORD2>
+			<KEYWORD2>PREVIOUS</KEYWORD2>
+			<KEYWORD2>PROPER</KEYWORD2>
+			<KEYWORD2>PUBLIC</KEYWORD2>
+			<KEYWORD2>READ-ONLY</KEYWORD2>
+			<KEYWORD2>READABLE</KEYWORD2>
+			<KEYWORD2>REFERENT</KEYWORD2>
+			<KEYWORD2>REFERENTS</KEYWORD2>
+			<KEYWORD2>REFERENTS-ALLOWED</KEYWORD2>
+			<KEYWORD2>REFERENTS-DISPLAYED</KEYWORD2>
+			<KEYWORD2>REFERENTS-NOT-ALLOWED</KEYWORD2>
+			<KEYWORD2>REMAINDER</KEYWORD2>
+			<KEYWORD2>REPEATED</KEYWORD2>
+			<KEYWORD2>REPLACEMENT-BREAK</KEYWORD2>
+			<KEYWORD2>REVERSED</KEYWORD2>
+			<KEYWORD2>SILENT-REFERENT</KEYWORD2>
+			<KEYWORD2>SIZE</KEYWORD2>
+			<KEYWORD2>SKIP</KEYWORD2>
+			<KEYWORD2>SOURCE</KEYWORD2>
+			<KEYWORD2>SPECIFIED</KEYWORD2>
+			<KEYWORD2>STATUS</KEYWORD2>
+			<KEYWORD2>STREAM</KEYWORD2>
+			<KEYWORD2>SUBDOC-ENTITY</KEYWORD2>
+			<KEYWORD2>SUBDOCUMENT</KEYWORD2>
+			<KEYWORD2>SUBDOCUMENTS</KEYWORD2>
+			<KEYWORD2>SUBELEMENT</KEYWORD2>
+			<KEYWORD2>SWITCH</KEYWORD2>
+			<KEYWORD2>SYMBOL</KEYWORD2>
+			<KEYWORD2>SYSTEM</KEYWORD2>
+			<KEYWORD2>TEXT-MODE</KEYWORD2>
+			<KEYWORD2>THIS</KEYWORD2>
+			<KEYWORD2>TIMES</KEYWORD2>
+			<KEYWORD2>TOKEN</KEYWORD2>
+			<KEYWORD2>TRUE</KEYWORD2>
+			<KEYWORD2>UNANCHORED</KEYWORD2>
+			<KEYWORD2>UNATTACHED</KEYWORD2>
+			<KEYWORD2>UNION</KEYWORD2>
+			<KEYWORD2>USEMAP</KEYWORD2>
+			<KEYWORD2>USING</KEYWORD2>
+			<KEYWORD2>VALUE</KEYWORD2>
+			<KEYWORD2>VALUED</KEYWORD2>
+			<KEYWORD2>VARIABLE</KEYWORD2>
+			<KEYWORD2>WITH</KEYWORD2>
+			<KEYWORD2>WRITABLE</KEYWORD2>
+			<KEYWORD2>XML</KEYWORD2>
+			<KEYWORD2>XML-DTD</KEYWORD2>
+			<KEYWORD2>XML-DTDS</KEYWORD2>
+			<KEYWORD2>YES</KEYWORD2>
+			<KEYWORD2>#ADDITIONAL-INFO</KEYWORD2>
+			<KEYWORD2>#APPINFO</KEYWORD2>
+			<KEYWORD2>#CAPACITY</KEYWORD2>
+			<KEYWORD2>#CHARSET</KEYWORD2>
+			<KEYWORD2>#CLASS</KEYWORD2>
+			<KEYWORD2>#COMMAND-LINE-NAMES</KEYWORD2>
+			<KEYWORD2>#CONSOLE</KEYWORD2>
+			<KEYWORD2>#CURRENT-INPUT</KEYWORD2>
+			<KEYWORD2>#CURRENT-OUTPUT</KEYWORD2>
+			<KEYWORD2>#DATA</KEYWORD2>
+			<KEYWORD2>#DOCTYPE</KEYWORD2>
+			<KEYWORD2>#DOCUMENT</KEYWORD2>
+			<KEYWORD2>#DTD</KEYWORD2>
+			<KEYWORD2>#EMPTY</KEYWORD2>
+			<KEYWORD2>#ERROR</KEYWORD2>
+			<KEYWORD2>#ERROR-CODE</KEYWORD2>
+			<KEYWORD2>#FILE-NAME</KEYWORD2>
+			<KEYWORD2>#FIRST</KEYWORD2>
+			<KEYWORD2>#GROUP</KEYWORD2>
+			<KEYWORD2>#IMPLIED</KEYWORD2>
+			<KEYWORD2>#ITEM</KEYWORD2>
+			<KEYWORD2>#LANGUAGE-VERSION</KEYWORD2>
+			<KEYWORD2>#LAST</KEYWORD2>
+			<KEYWORD2>#LIBPATH</KEYWORD2>
+			<KEYWORD2>#LIBRARY</KEYWORD2>
+			<KEYWORD2>#LIBVALUE</KEYWORD2>
+			<KEYWORD2>#LINE-NUMBER</KEYWORD2>
+			<KEYWORD2>#MAIN-INPUT</KEYWORD2>
+			<KEYWORD2>#MAIN-OUTPUT</KEYWORD2>
+			<KEYWORD2>#MARKUP-ERROR-COUNT</KEYWORD2>
+			<KEYWORD2>#MARKUP-ERROR-TOTAL</KEYWORD2>
+			<KEYWORD2>#MARKUP-PARSER</KEYWORD2>
+			<KEYWORD2>#MARKUP-WARNING-COUNT</KEYWORD2>
+			<KEYWORD2>#MARKUP-WARNING-TOTAL</KEYWORD2>
+			<KEYWORD2>#MESSAGE</KEYWORD2>
+			<KEYWORD2>#NONE</KEYWORD2>
+			<KEYWORD2>#OUTPUT</KEYWORD2>
+			<KEYWORD2>#PLATFORM-INFO</KEYWORD2>
+			<KEYWORD2>#PROCESS-INPUT</KEYWORD2>
+			<KEYWORD2>#PROCESS-OUTPUT</KEYWORD2>
+			<KEYWORD2>#RECOVERY-INFO</KEYWORD2>
+			<KEYWORD2>#SGML</KEYWORD2>
+			<KEYWORD2>#SGML-ERROR-COUNT</KEYWORD2>
+			<KEYWORD2>#SGML-ERROR-TOTAL</KEYWORD2>
+			<KEYWORD2>#SGML-WARNING-COUNT</KEYWORD2>
+			<KEYWORD2>#SGML-WARNING-TOTAL</KEYWORD2>
+			<KEYWORD2>#SUPPRESS</KEYWORD2>
+			<KEYWORD2>#SYNTAX</KEYWORD2>
+			<KEYWORD2>#!</KEYWORD2>
+			
+			<KEYWORD3>ANY</KEYWORD3>
+			<KEYWORD3>ANY-TEXT</KEYWORD3>
+			<KEYWORD3>BLANK</KEYWORD3>
+			<KEYWORD3>CDATA</KEYWORD3>
+			<KEYWORD3>CDATA-ENTITY</KEYWORD3>
+			<KEYWORD3>CONTENT-END</KEYWORD3>
+			<KEYWORD3>CONTENT-START</KEYWORD3>
+			<KEYWORD3>DIGIT</KEYWORD3>
+			<KEYWORD3>LETTER</KEYWORD3>
+			<KEYWORD3>NUMBER</KEYWORD3>
+			<KEYWORD3>PCDATA</KEYWORD3>
+			<KEYWORD3>RCDATA</KEYWORD3>
+			<KEYWORD3>SDATA</KEYWORD3>
+			<KEYWORD3>SDATA-ENTITY</KEYWORD3>
+			<KEYWORD3>SPACE</KEYWORD3>
+			<KEYWORD3>TEXT</KEYWORD3>
+			<KEYWORD3>VALUE-END</KEYWORD3>
+			<KEYWORD3>VALUE-START</KEYWORD3>
+			<KEYWORD3>WORD-END</KEYWORD3>
+			<KEYWORD3>WORD-START</KEYWORD3>
+		</KEYWORDS>
+	</RULES>
+</MODE>
